--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_localizations:
     sdk: flutter
+  google_fonts: ^6.3.2
   intl: ^0.20.2
   supabase_flutter: ^2.10.3
 
