actualizacion de datos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
+  lints: ^6.0.0
   mocktail: ^1.0.4
   very_good_analysis: ^10.0.0
 
