--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^6.3.2
   intl: ^0.20.2
   supabase_flutter: ^2.10.3
+  uni_links: ^0.5.1
 
 dev_dependencies:
   bloc_test: ^10.0.0
