--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.2.2
   google_fonts: ^6.0.0
   intl: ^0.20.0
   supabase_flutter: ^2.0.0
