--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.2.2
   google_fonts: ^6.0.0
+  image_picker: ^1.2.1
   intl: ^0.20.0
   path_provider: ^2.0.0
   supabase_flutter: ^2.0.0
